--- a/_data/people.yml
+++ b/_data/people.yml
@@ -80,6 +80,14 @@
       website: 
       image: arsal-imtiaz.jpg
       description: Arsal is a second-year Master's student in Computer Science. His current research focuses on building annotator frameworks compatible with Concrete.
+      
+    - name: Chandrashekar Nair
+      role: Graduate Researcher
+      department: Computer Science
+      university: University of Rochester
+      website: 
+      image: chandrashekar-nair.jpg
+      description: Chandrashekar is a second-year MS student in Computer Science. He is currently working on an annotation interface for Concrete data.
   
 
 - name: Alumni
