--- a/_data/people.yml
+++ b/_data/people.yml
@@ -88,6 +88,14 @@
       website: 
       image: pinxin-liu.jpg
       description: Pinxin is a second-year undergraduate student in Computer Science. His current research focuses on coreference resolution.  
+      
+    - name: Jakob Dravk
+      role: Undergraduate Researcher
+      department: Linguistics
+      university: University of Rochester
+      website: 
+      image: jakob-dravk.jpg
+      description: Jakob is a third-year undergraduate student in Linguistics. His research interests include generating referring expressions and entity coreference.
 
 - name: Alumni
   people:
