--- a/_data/research.yml
+++ b/_data/research.yml
@@ -221,3 +221,16 @@ megaattitude:
       href: "http://megaattitude.io/projects/mega-acceptability/"
     - label: "doi"
       href: "https://doi.org/10.3765/salt.v26i0.3819"
+
+supermereo:
+  papers:
+  - citation: "Gantt, William, Lelia Glass, and Aaron Steven White. 2022. Decomposing and Recomposing Event Structure. <i>Transactions of the Association for Computational Linguistics</i> 10: 17–34"
+    links:
+    - label: "pdf"
+      href: "https://direct.mit.edu/tacl/article-pdf/doi/10.1162/tacl_a_00445/1984114/tacl_a_00445.pdf"
+    - label: "data"
+      href: "http://decomp.io/projects/event-structure/"
+    - label: "code"
+      href: "https://github.com/wgantt/event_type_induction"
+    - label: "doi"
+      href: "https://doi.org/10.1162/tacl_a_00445"
