Updates Ellise's pronouns.

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -85,7 +85,7 @@
     - name: Ellise Moon
       website: https://eclairemoon.github.io/
       image: ellise-moon.jpg
-      description: Ellise is currently a fourth-year PhD student in Linguistics and Philosophy at the Umniversity of Rochester. Her current research focuses on countability and count-mass coercion. While in the FACTS.lab, her research focused on <a href="https://ling.auf.net/lingbuzz/005282/current.pdf">the temporal interpretation of nonfinite clause-embedding structures</a>. 
+      description: Ellise is currently a fourth-year PhD student in Linguistics and Philosophy at the University of Rochester. Their current research focuses on countability and count-mass coercion. While in the FACTS.lab, their research focused on <a href="https://ling.auf.net/lingbuzz/005282/current.pdf">the temporal interpretation of nonfinite clause-embedding structures</a>. 
 
     - name: Venkata Govindarajan
       website: https://venkatasg.me/
