--- a/_data/people.yml
+++ b/_data/people.yml
@@ -108,7 +108,7 @@
     - name: Julian Grove
       website: http://juliangrove.github.io
       image: julian-grove.jpg
-      description: Julian a post-doc in the FACTS.lab. He is interested in
+      description: Julian is a post-doc in the FACTS.lab. He is interested in
   integrating Bayesian probabilistic models of inference with type-theoretic
   natural language semantics. He is also interested in characterizing dynamic
   semantic phenomena, such as presupposition, by relying on theories of effects,
