--- a/_data/people.yml
+++ b/_data/people.yml
@@ -68,9 +68,9 @@
       role: Graduate Intern
       department: Linguistics
       univerity: The University of Edinburgh
-      website: angelacao8.github.io
+      website: https://angelacao8.github.io
       image: angela-c.jpg
-      description: Angela is a M.Sc. student in Linguistics. Her research interests include using language data to explore causal models of cognition.
+      description: Angela is a M.Sc. student in Linguistics at the University of Edinburgh. Her research interests include using language data to explore causal models of cognition.
 
 - name: Undergraduate Researchers
   show: true
