Fixes Marty's name

--- a/_data/workshop.yml
+++ b/_data/workshop.yml
@@ -57,7 +57,7 @@ people:
     image: awhite.jpg
     role: "organizer"
   mvanschijndel:
-    name: Lilia Rissman
+    name: Marten van Schijndel
     website: https://vansky.github.io/
     university: Cornell University
     department: Department of Linguistics
