--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,119 +1,146 @@
-- name: Faculty Researchers
-  show: true
-  people:
-    - name: Aaron Steven White
-      website: http://aaronstevenwhite.io
-      image: aaron-white.jpg
-      description: Aaron is an Assistant Professor in the Department of Linguistics at the University of Rochester, with a secondary appointment in the Department of Computer Science and an affiliation with the Goergen Institute for Data Science. He directs the FACTS.lab and co-leads the <a href="http://megaattitude.io">MegaAttitude Project</a> and the <a href="http://decomp.io">Decompositional Semantic Initiative</a>.
+people:
+  aswhite:
+    name: Aaron Steven White
+    website: http://aaronstevenwhite.io
+    image: aaron-white.jpg
+    description: Aaron is an Assistant Professor in the Department of Linguistics at the University of Rochester, with a secondary appointment in the Department of Computer Science and an affiliation with the Goergen Institute for Data Science. He directs the FACTS.lab and co-leads the <a href="http://megaattitude.io">MegaAttitude Project</a> and the <a href="http://decomp.io">Decompositional Semantic Initiative</a>.
+  jgrove:
+    name: Julian Grove
+    website: http://juliangrove.github.io
+    image: julian-grove.jpg
+    description: Julian is a post-doc in the FACTS.lab. He is interested in integrating Bayesian probabilistic models of inference with type-theoretic natural language semantics. He is also interested in characterizing dynamic semantic phenomena, such as presupposition, by relying on theories of effects, and determining how those characterizations should be combined with one another. 
+  svashishtha:
+    name: Siddharth Vashishtha
+    website: https://sidsvash26.github.io/
+    description: Sid is a fourth-year PhD Student in Computer Science advised by Aaron White. His research work focuses on extracting event semantics from natural language text. His latest projects involve working on <a href="https://aclanthology.org/2020.findings-emnlp.363/">temporal reasoning in natural language inference systems</a> and <a href="https://aclanthology.org/P19-1280/">temporal relation extraction</a>. 
+    image: siddharth-vashishtha.jpg
+  wgantt:
+    name: William Gantt
+    website: https://wgantt.github.io/
+    image: william-gantt.jpg
+    description: Will is a fourth-year PhD student in Computer Science advised by Aaron White. His research interests lie broadly in natural language understanding and information extraction, with a focus on document-level event understanding. Some of his recent projects along these lines include work on models for iterative template extraction, as well as resource development and modeling for<a href="http://decomp.io/projects/event-structure/">event structure</a>. He has also worked on investigations of <a href="http://megaattitude.io/projects/mega-intensionality/">patterns in lexically-triggered belief and desire inferences</a> across the English lexicon.
+  han:
+    name: Hannah An
+    website: https://hannah0n.github.io/
+    image: hannah-an.jpg     
+    description: Hannah is a fourth-year PhD student in Computer Science co-advised by Aaron White and <a href="https://www.cs.rochester.edu/~schubert/">Len Schubert</a>. Her research aims to enable computers to acquire lexical knowledge for better language understanding. Her current project involves collecting annotated data for verb phrase ellipsis and developing models for identifying and resolving the ellipses. She has also worked on investigating <a href="http://megaattitude.io/projects/mega-negraising/">neg-raising inference triggers</a> using a lexicon-scale dataset.
+  bkane:
+    name: Benjamin Kane
+    website: https://www.cs.rochester.edu/u/bkane2/
+    description: Ben is a fourth-year PhD student in Computer Science co-advised by Aaron White and <a href="https://www.cs.rochester.edu/~schubert/">Len Schubert</a>. His current research involves creating <a href="https://ling.auf.net/lingbuzz/005930/current.pdf">natural language inference models predicting belief and desire inferences</a> (including <a href="https://aclanthology.org/2020.starsem-1.9/">modeling annotator disagreement in natural language inference</a>), and he is interested in future applications of these models in plan-based dialogue systems.
+    image: benjamin-kane.jpg 
+  srichter:
+    name: Stephanie N. Richter
+    website: http://stephrichter.github.io
+    image: stephanie-richter.jpg
+    description: Stephanie is a second-year PhD student in Linguistics co-advised by Aaron White and <a href="https://asiapietraszko.com/">Asia Pietraszko</a>. Her current research is focused on statistical models of acceptability, prototypicality, and word sense.
+  cacevesrodriguez:
+    name: Constanza Aceves Rodriguez
+    website: https://consaceves.github.io/
+    description: Constanza is a second-year PhD student in Linguistics and Computer Science co-advised by <a href="http://www.sas.rochester.edu/lin/sgrimm/">Scott Grimm</a>, Aaron White, and Nadine Grimm. Her current research focuses on cross-linguistic analysis of English and Spanish clause-embedding verbs.
+    image: constanza-acevesrodriguez.jpg 
+  jvalinsky:
+    name: Jack Valinsky
+    website: https://jackvalinsky.com
+    image: jack-valinsky.jpg
+    description: Jack is a second-year MS student in Linguistics advised by <a href="http://www.sas.rochester.edu/lin/sgrimm/">Scott Grimm</a>. His current research focuses on how lexical and syntactic features affect interpretability and acceptability of degraded environments.
+  aimtiaz:
+    name: Arsal Imtiaz
+    website: https://www.linkedin.com/in/arsalimtiaz/
+    image: arsal-imtiaz.jpg
+    description: Arsal is a second-year MS student in Computer Science. His current research focuses on building fully-featured web-based annotation tools for natural language processing.
+  acao:
+    name: Angela Cao
+    website: https://angelacao8.github.io
+    image: angela-c.jpg
+    description: Angela is a M.Sc. student in Linguistics at the University of Edinburgh. Her research interests include using language data to explore causal models of cognition.
+  amartin:
+    name: Alexander Martin
+    website: https://www.linkedin.com/in/alexander-david-paul-martin/
+    image: alex-martin.jpg
+    description: Alex is a third-year undergraduate student in Computer Science. His research interests are in natural language understanding, information extraction, and question answering.
+  pliu:
+    name: Pinxin Liu
+    website: 
+    image: pinxin-liu.jpg
+    description: Pinxin is a second-year undergraduate student in Computer Science. His current research focuses on coreference resolution.  
+  jdravk:
+    name: Jakob Dravk
+    website: 
+    image: jakob-dravk.jpg
+    description: Jakob is a third-year undergraduate student in Linguistics. His research interests include referring expression generation and coreference.
+  cgiordano:
+    name: Carina Giordano
+    website:
+    image: carina-g.jpg
+    description: Carina is a second-year undergraduate student in Linguistics. Her research interests include referring expression generation and coreference.
+  cnair:
+    name: Chandrashekar Nair
+    website: https://www.linkedin.com/in/chandrashekar-nair-47a034179/
+    image: chandrashekar-nair.jpg
+    description: Chandrashekar is currently a software engineer at Everlaw. While in the FACTS.lab, his research focused on building fully-featured web-based annotation tools for natural language processing.
+  zliu:
+    name: Zhendong Liu
+    website: https://www.linkedin.com/in/zhendong-liu-834872143/
+    image: zhendong-liu.jpg
+    description: Zhendong is currently a first-year PhD student in Linguistics at the University of Southern California. While in the FACTS.lab, his research focused on the nature of clause-embedding in Mandarin.
+  wgu:
+    name: Weiwei Gu
+    website: 
+    image: weiwei-gu.jpg
+    description: Weiwei is currently a first-year PhD student in Computer Science at Arizona State University. While in the FACTS.lab, his research focused on document-level information extraction and question answering. 
+  emoon:
+    name: Ellise Moon
+    website: https://eclairemoon.github.io/
+    image: ellise-moon.jpg
+    description: Ellise is currently a fourth-year PhD student in Linguistics and Philosophy at the University of Rochester. Their current research focuses on countability and count-mass coercion. While in the FACTS.lab, their research focused on <a href="https://ling.auf.net/lingbuzz/005282/current.pdf">the temporal interpretation of nonfinite clause-embedding structures</a>. 
+  vgovindarajan:
+    name: Venkata Govindarajan
+    website: https://venkatasg.net/
+    image: venkata-govindarajan.jpg
+    description: Venkat is currently a fourth-year PhD student in Linguistics at the University of Texas, Austin. While in the FACTS.lab, his research focused on <a href="https://doi.org/10.1162/tacl_a_00285">the expression of generalizations in text</a>.
 
-- name: Postdoctoral Researchers
-  show: true
-  people:
-    - name: Julian Grove
-      website: http://juliangrove.github.io
-      image: julian-grove.jpg
-      description: Julian is a post-doc in the FACTS.lab. He is interested in integrating Bayesian probabilistic models of inference with type-theoretic natural language semantics. He is also interested in characterizing dynamic semantic phenomena, such as presupposition, by relying on theories of effects, and determining how those characterizations should be combined with one another. 
 
-- name: Graduate Researchers
-  show: true
-  people:
-    - name: Siddharth Vashishtha
-      website: https://sidsvash26.github.io/
-      description: Sid is a fourth-year PhD Student in Computer Science advised by Aaron White. His research work focuses on extracting event semantics from natural language text. His latest projects involve working on <a href="https://aclanthology.org/2020.findings-emnlp.363/">temporal reasoning in natural language inference systems</a> and <a href="https://aclanthology.org/P19-1280/">temporal relation extraction</a>. 
-      image: siddharth-vashishtha.jpg
+groups:
+  faculty:
+    name: Faculty Researchers
+    members:
+    - aswhite
+  postdocs:
+    name: Postdoctoral Researchers
+    members:
+    - jgrove
+  grads: 
+    name: Graduate Researchers
+    members:
+    - svashishtha
+    - wgantt
+    - han
+    - bkane
+    - srichter
+    - cacevesrodriguez
+    - jvalinsky
+    - aimtiaz
+    - acao
+  undergrads:
+    name: Undergraduate Researchers
+    members:
+    - amartin
+    - pliu
+    - jdravk
+    - cgiordano
+  alumni:
+    name: Alumni
+    members:
+    - cnair
+    - zliu
+    - wgu
+    - emoon
+    - vgovindarajan
 
-    - name: William Gantt
-      website: https://wgantt.github.io/
-      image: william-gantt.jpg
-      description: Will is a fourth-year PhD student in Computer Science advised by Aaron White. His research interests lie broadly in natural language understanding and information extraction, with a focus on document-level event understanding. Some of his recent projects along these lines include work on models for iterative template extraction, as well as resource development and modeling for<a href="http://decomp.io/projects/event-structure/">event structure</a>. He has also worked on investigations of <a href="http://megaattitude.io/projects/mega-intensionality/">patterns in lexically-triggered belief and desire inferences</a> across the English lexicon.
-
-    - name: Hannah An
-      website: https://hannah0n.github.io/
-      image: hannah-an.jpg     
-      description: Hannah is a fourth-year PhD student in Computer Science co-advised by Aaron White and <a href="https://www.cs.rochester.edu/~schubert/">Len Schubert</a>. Her research aims to enable computers to acquire lexical knowledge for better language understanding. Her current project involves collecting annotated data for verb phrase ellipsis and developing models for identifying and resolving the ellipses. She has also worked on investigating <a href="http://megaattitude.io/projects/mega-negraising/">neg-raising inference triggers</a> using a lexicon-scale dataset.
-      
-    - name: Benjamin Kane
-      website: https://www.cs.rochester.edu/u/bkane2/
-      description: Ben is a fourth-year PhD student in Computer Science co-advised by Aaron White and <a href="https://www.cs.rochester.edu/~schubert/">Len Schubert</a>. His current research involves creating <a href="https://ling.auf.net/lingbuzz/005930/current.pdf">natural language inference models predicting belief and desire inferences</a> (including <a href="https://aclanthology.org/2020.starsem-1.9/">modeling annotator disagreement in natural language inference</a>), and he is interested in future applications of these models in plan-based dialogue systems.
-      image: benjamin-kane.jpg
-
-    - name: Stephanie N. Richter
-      website: http://stephrichter.github.io
-      image: stephanie-richter.jpg
-      description: Stephanie is a second-year PhD student in Linguistics co-advised by Aaron White and <a href="https://asiapietraszko.com/">Asia Pietraszko</a>. Her current research is focused on statistical models of acceptability, prototypicality, and word sense.
-
-    - name: Constanza Aceves Rodriguez
-      website: https://consaceves.github.io/
-      description: Constanza is a second-year PhD student in Linguistics and Computer Science co-advised by <a href="http://www.sas.rochester.edu/lin/sgrimm/">Scott Grimm</a>, Aaron White, and Nadine Grimm. Her current research focuses on cross-linguistic analysis of English and Spanish clause-embedding verbs.
-      image: constanza-acevesrodriguez.jpg
-
-    - name: Jack Valinsky
-      department: Linguistics
-      university: University of Rochester
-      website: https://jackvalinsky.com
-      image: jack-valinsky.jpg
-      description: Jack is a second-year MS student in Linguistics advised by <a href="http://www.sas.rochester.edu/lin/sgrimm/">Scott Grimm</a>. His current research focuses on how lexical and syntactic features affect interpretability and acceptability of degraded environments.
-      
-    - name: Arsal Imtiaz
-      website: https://www.linkedin.com/in/arsalimtiaz/
-      image: arsal-imtiaz.jpg
-      description: Arsal is a second-year MS student in Computer Science. His current research focuses on building fully-featured web-based annotation tools for natural language processing.
-
-    - name: Angela Cao
-      role: Graduate Intern
-      department: Linguistics
-      univerity: The University of Edinburgh
-      website: https://angelacao8.github.io
-      image: angela-c.jpg
-      description: Angela is a M.Sc. student in Linguistics at the University of Edinburgh. Her research interests include using language data to explore causal models of cognition.
-
-- name: Undergraduate Researchers
-  show: true
-  people:
-    - name: Alexander Martin
-      website: https://www.linkedin.com/in/alexander-david-paul-martin/
-      image: alex-martin.jpg
-      description: Alex is a third-year undergraduate student in Computer Science. His research interests are in natural language understanding, information extraction, and question answering.
-
-    - name: Pinxin Liu
-      website: 
-      image: pinxin-liu.jpg
-      description: Pinxin is a second-year undergraduate student in Computer Science. His current research focuses on coreference resolution.  
-
-    - name: Jakob Dravk
-      website: 
-      image: jakob-dravk.jpg
-      description: Jakob is a third-year undergraduate student in Linguistics. His research interests include referring expression generation and coreference.
-
-    - name: Carina Giordano
-      website:
-      image: carina-g.jpg
-      description: Carina is a second-year undergraduate student in Linguistics. Her research interests include referring expression generation and coreference.
-      
-- name: Alumni
-  show: false
-  people:
-    - name: Chandrashekar Nair
-      website: https://www.linkedin.com/in/chandrashekar-nair-47a034179/
-      image: chandrashekar-nair.jpg
-      description: Chandrashekar is currently a software engineer at Everlaw. While in the FACTS.lab, his research focused on building fully-featured web-based annotation tools for natural language processing.
-
-    - name: Zhendong Liu
-      website: https://www.linkedin.com/in/zhendong-liu-834872143/
-      image: zhendong-liu.jpg
-      description: Zhendong is currently a first-year PhD student in Linguistics at the University of Southern California. While in the FACTS.lab, his research focused on the nature of clause-embedding in Mandarin.
-
-    - name: Weiwei Gu
-      website: 
-      image: weiwei-gu.jpg
-      description: Weiwei is currently a first-year PhD student in Computer Science at Arizona State University. While in the FACTS.lab, his research focused on document-level information extraction and question answering. 
-
-    - name: Ellise Moon
-      website: https://eclairemoon.github.io/
-      image: ellise-moon.jpg
-      description: Ellise is currently a fourth-year PhD student in Linguistics and Philosophy at the University of Rochester. Their current research focuses on countability and count-mass coercion. While in the FACTS.lab, their research focused on <a href="https://ling.auf.net/lingbuzz/005282/current.pdf">the temporal interpretation of nonfinite clause-embedding structures</a>. 
-
-    - name: Venkata Govindarajan
-      website: https://venkatasg.net/
-      image: venkata-govindarajan.jpg
-      description: Venkat is currently a fourth-year PhD student in Linguistics at the University of Texas, Austin. While in the FACTS.lab, his research focused on <a href="https://doi.org/10.1162/tacl_a_00285">the expression of generalizations in text</a>.
+roles:
+  zulipadministrator: srichter
+  githubadministrator: jgrove
+  awsadministrator: wgantt
+  gmailadministrator: wgantt
+  devboxadministrator: svashishtha
