--- a/_data/people.yml
+++ b/_data/people.yml
@@ -139,8 +139,8 @@ groups:
     - vgovindarajan
 
 roles:
-  zulipadministrator: srichter
+  zulipadministrator: jgrove
   githubadministrator: jgrove
-  awsadministrator: wgantt
-  gmailadministrator: wgantt
+  awsadministrator: jgrove
+  gmailadministrator: jgrove
   devboxadministrator: svashishtha
