--- a/_data/people.yml
+++ b/_data/people.yml
@@ -99,7 +99,11 @@ people:
     website: https://venkatasg.net/
     image: venkata-govindarajan.jpg
     description: Venkat is currently a fourth-year PhD student in Linguistics at the University of Texas, Austin. While in the FACTS.lab, his research focused on <a href="https://doi.org/10.1162/tacl_a_00285">the expression of generalizations in text</a>.
-
+  rhamelburg:
+    name: Rachel Hamelburg
+    website: https://www.linkedin.com/in/rachel-hamelburg/
+    image: rachel-hamelburg.jpg
+    description: Rachel is currently a fourth-year undergraduate student in Linguistics, Spanish, and Comparative Literature at the University of Rochester. Her research interests include information extraction and natural language understanding.
 
 groups:
   faculty:
@@ -129,6 +133,7 @@ groups:
     - pliu
     - jdravk
     - cgiordano
+    - rhamelburg
   alumni:
     name: Alumni
     members:
